--- a/Symfony/my_project_directory/config/routes.yaml
+++ b/Symfony/my_project_directory/config/routes.yaml
@@ -6,4 +6,4 @@ controllers:
 
 index:
     path: /
-    controller: App\Controller\DefaultController::index
+    controller: App\Controller\HomepageController::index
